adding markdown in progress

--- a/Sarcasm Prediction Using Tensorflow.ipynb
+++ b/Sarcasm Prediction Using Tensorflow.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "title of the project, aim of the prohects, sttaing about the json file we have and what we are gonna do"
+    "### Sarcasm Prediction using Deep Learning\n",
+    "\n",
+    "This project is meant for differentiating whether the given passage is sarcasm or not. The Data's are captured in the json format and its been loaded afterwards for processing. \n",
+    "\n",
+    "#### Why Deep Learning?\n",
+    "\n",
+    "The data to be processed is huge, which results in large memory space and time for processing.Deep Learning out perform other techniques if the data size is large.As per Andrew Ng, the chief scientist of China’s major search engine Baidu and one of the leaders of the Google Brain Project, “The analogy to deep learning is that the rocket engine is the deep learning models and the fuel is the huge amounts of data we can feed to these algorithms.”\n",
+    "\n",
+    "##### Note:\n",
+    "\n",
+    "This project is constructed using keras, a high-level neural networks API which is written using Python and capable of running over TensorFlow.\n"
    ]
   },
   {
@@ -18,6 +28,15 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "import numpy as np\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### About the dataset\n",
+    "\n",
+    "The dataset is saved as json file, which is loaded using context manager. Both the independent and dependent feature, headline and is_sarcastic respectively, is saved in the list."
    ]
   },
   {
@@ -67,7 +86,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "so why do we need training size speperately and also"
+    "#### Splitting the dataset\n",
+    "\n",
+    "Dataset is splitted in to training dataset and testing dataset. Model will be fitted using training dataset and validated using new datasets which is not seed by the model during training, so called testing dataset. In this way, we can able to calculate the perfomance of the model.\n",
+    "\n",
+    "Slicing function, provided by python, is used for this purpose!!"
    ]
   },
   {
